--- a/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
+++ b/Metodologia/Secciones/AnalisisPeriodo/AnalisisPeriodo.tex
@@ -52,12 +52,12 @@ El código donde se realizó el análisis se encuentra en el Notebook
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[scale=0.28]{Metodologia/Secciones/AnalisisPeriodo/Figures/ZTF Phase-Folded.png}
-	\includegraphics[scale=0.28]{Metodologia/Secciones/AnalisisPeriodo/Figures/Gaia Phase-Folded.png}
-	\includegraphics[scale=0.37]{Metodologia/Secciones/AnalisisPeriodo/Figures/Iturbide Phase-Folded.png}
+	\includegraphics[scale=0.29]{Metodologia/Secciones/AnalisisPeriodo/Figures/ZTF Phase-Folded.png}
+	\includegraphics[scale=0.29]{Metodologia/Secciones/AnalisisPeriodo/Figures/Gaia Phase-Folded.png}
+	\includegraphics[scale=0.3]{Metodologia/Secciones/AnalisisPeriodo/Figures/Iturbide Phase-Folded.png}
 
 	\caption{Curvas de luz de ZTF, Gaia e Iturbide en espacio fase dado un
-		periodo orbital de 8.005584950787622 horas. El tiempo de conjunción
+		periodo orbital de $8.00558 \pm 0.00013$ horas. El tiempo de conjunción
 		superior son corregidos en los siguientes pasos de afinación del modelo
 		de PHOEBE, el cual ajusta la fase 0 para que coincidan las 3 curvas de
 		luz. Las observaciones de Iturbide se clasifican por su noche de
