--- a/Muestra/Secciones/CriteriosDeSeleccion.tex
+++ b/Muestra/Secciones/CriteriosDeSeleccion.tex
@@ -176,7 +176,7 @@ sus curvas de luz; de estas reportan que \num{74700} fuentes son binarias
 eclipsantes. A pesar de haber confirmado la clasificación de estas fuentes, aún
 quedan varios sistemas cuya naturaleza es desconocida.
 
-\textbf{\atoObjId} está clasificado como una de estas candidatas a binaria
+\textbf{\atoObjIdNoSpace} está clasificado como una de estas candidatas a binaria
 eclipsante. Como este sistema carece una clasificación concreta, no existe mucha
 información acerca de ella. Tiene una magnitud promedio de aproximadamente
 \num{16.91}, lo cual lo hace un sistema tenue. Con una ascensión recta de
@@ -196,25 +196,24 @@ físicos del sistema.
 
 \subsection{Datos de Gaia}
 
-Como parte de sus observaciones regulares, Gaia ha observado \atoObjId durante 3
-años de operación, obteniendo magnitudes del sistema en varias etapas en su fase
-empezando desde agosto del 2014 hasta mayo del 2017. En la
-\reffigure{gdr3AtoObjLightCurves} se pueden ver las 3 curvas de luz de Gaia en
-cada pasabanda, $G_{\mathrm{BP}}$, $G_{\mathrm{RP}}$ y $G$. Estas mediciones en distintos filtros
-permite el análisis del color del sistema, el cual permite ajustar la
-temperatura efectiva de una solución fotométrica a los datos observados. Este
-método de determinar las temperaturas efectivas del sistema no solo nos libra de
-tener que utilizar una relación empírica para darle como dato de entrada al
-modelo\textemdash un ajuste de mínimos cuadrados tendrá que tomar en cuenta la
-física de radiación de ambas componentes durante cualquier proceso de
-optimización de parámetros\textemdash pero también permite determinar la
-incertidumbre de este parámetro por medio del muestreo del espacio de parámetros
-libres.
+Gaia ha observado a \atoObjId durante 3 años de su operación, obteniendo
+magnitudes del sistema en varias etapas en su fase empezando desde agosto del
+2014 hasta mayo del 2017. En la \reffigure{gdr3AtoObjLightCurves} se pueden ver
+las 3 curvas de luz de Gaia en cada pasabanda, $G_{\mathrm{BP}}$,
+$G_{\mathrm{RP}}$ y $G$. Estas mediciones en distintos filtros permite el
+análisis del color del sistema, el cual permite ajustar la temperatura efectiva
+de una solución fotométrica a los datos observados. Este método de determinar
+las temperaturas efectivas del sistema no solo nos libra de tener que utilizar
+una relación empírica para darle como dato de entrada al modelo\textemdash un
+ajuste de mínimos cuadrados tendrá que tomar en cuenta la física de radiación de
+ambas componentes durante cualquier proceso de optimización de
+parámetros\textemdash pero también permite determinar la incertidumbre de este
+parámetro por medio del muestreo del espacio de parámetros libres.
 
 % TODO: maybe move to appendix?
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.4]{Muestra/Secciones/Figures/GDR3-Light-Curves.png}
+	\includegraphics[scale=0.38]{Muestra/Secciones/Figures/GDR3-Light-Curves.png}
 	\caption{Magnitud de \atoObjId registrada en la base de datos de Gaia DR3
 	bajo su número identificador en el catálogo. La variabilidad de
 	aproximadamente 0.5 mag en el brillo del sistema se atribuye a la presencia
@@ -259,7 +258,7 @@ completas se pueden ver en la \reffigure{figuraZtfCurvasLuz}.
 % TODO: maybe move to appendix?
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.4]{Muestra/Secciones/Figures/Figura ZTF Light Curves.png}
+	\includegraphics[scale=0.38]{Muestra/Secciones/Figures/Figura ZTF Light Curves.png}
 	\caption{Curvas de luz en las pasabandas ZTF:g (verde) y ZTF:r (rojo) para \atoObjId, 
 	obtenido del catálogo de ZTF por su identificador de SIMBAD.}
 	\label{figuraZtfCurvasLuz}
