--- a/ref.bib
+++ b/ref.bib
@@ -1001,3 +1001,67 @@ ADS Bibcode: 1959cbs..book.....K},
 	eprint = {2309.16946 [astro-ph]},
 	keywords = {Astrophysics - Solar and Stellar Astrophysics}
 }
+
+@article{odesse_using_computational_models_params_kepler_binaries_2022,
+	title = {Using Computational Models to Uncover the Parameters of Three Kepler Binaries: {KIC} 5957123, {KIC} 8314879, and {KIC} 10727668},
+	volume = {926},
+	issn = {0004-637X},
+	url = {https://ui.adsabs.harvard.edu/abs/2022ApJ...926...46O},
+	doi = {10.3847/1538-4357/ac4156},
+	shorttitle = {Using Computational Models to Uncover the Parameters of Three Kepler Binaries},
+	abstract = {Theories of stellar convective core overshoot can be examined through analysis of pulsating stars. Better accuracy can be achieved by obtaining external constraints such as those provided by observing pulsating stars in eclipsing binary systems, but this requires that the binary parameters be identified so photometric variations of the pulsating component may be isolated from the binary periodicity. This study aims to uncover the physical parameters of three binaries observed by the Kepler spacecraft. We also seek to evaluate the feasibility of accurately constraining binaries using only readily available time-series photometry and distance estimates. Binary models were constructed using the Physics of Eclipsing Binaries software package. Markov Chain Monte Carlo ({MCMC}) methods were used to sample the parameter space of these models and provide estimates of the posterior distributions for these systems. An initial run using binned light-curve data was performed to identify general parameter trends and provide initializing distributions for a subsequent analysis incorporating the full data set. We present theoretical models for all three binaries, along with posterior distributions from our {MCMC} analyses. Models for {KIC} 8314879 and {KIC} 10727668 produced a good match to the observed data, while the model of {KIC} 5957123 failed to generate an appropriate synthetic light curve. For the two successful models, we interpret the posterior distributions and discuss confidence in our parameter estimates and uncertainties. We also evaluate the feasibility of this procedure in various contexts and propose several modifications to improve the success of future studies. *Released on 2021 August 20.},
+	pages = {46},
+	journaltitle = {The Astrophysical Journal},
+	author = {Odesse, Padraic E. and Lovekin, Catherine},
+	urldate = {2024-08-27},
+	date = {2022-02-01},
+	note = {Publisher: {IOP}
+{ADS} Bibcode: 2022ApJ...926...46O},
+	keywords = {1857, 1889, 254, 444, 455, Astrophysics - Solar and Stellar Astrophysics}
+}
+
+@misc{castelli_kurucz_new_model_atmospheres_2004,
+	title = {New Grids of {ATLAS}9 Model Atmospheres},
+	url = {http://arxiv.org/abs/astro-ph/0405087},
+	doi = {10.48550/arXiv.astro-ph/0405087},
+	abstract = {New opacity distribution functions ({ODFs}) for several metallicities have been computed. The main improvements upon previous {ODFs} computed by Kurucz (1990) are: (1) the replacement of the solar abundances from Anders \& Grevesse (1989) with those from Grevesse \& Sauval (1998); (2) the replacement of the {TiO} lines provided by Kurucz (1993) with the {TiO} lines from Schwenke (1998), as distributed by Kurucz (1999a); (3) the addition of the H2O lines from Partridge \& Schwenke (1997) as distributed by Kurucz (1999b); (4) the addition of the {HI}-{HI} and {HI}-H+ quasi-molecular absorptions near 1600 A and 1400 A computed according to Allard et al. (1998). Other minor improvements are related with some changes in a few atomic and molecular data. New grids of {ATLAS}9 model atmospheres for Teff from 3500K to 50000K and logg from 0.0 dex to 5.0 dex have been computed for several metallicities with the new {ODFs}. Preliminary comparisons of the results from the old and new models have shown differences in the energy distributions of stars cooler than 4500K, in the ultraviolet energy distribution of metal-poor A-type stars, in the U-B and u-b color indices for Teff{\textless}7000K and in all the color indices for Teff{\textless}4250K.},
+	number = {{arXiv}:astro-ph/0405087},
+	publisher = {{arXiv}},
+	author = {Castelli, F. and Kurucz, R. L.},
+	urldate = {2024-08-28},
+	date = {2004-05-05},
+	eprinttype = {arxiv},
+	eprint = {astro-ph/0405087},
+	keywords = {Astrophysics}
+}
+
+@article{green_3d_dustmap_gaia_panstarrs_2mass_2019,
+	title = {A 3D Dust Map Based on Gaia, Pan-{STARRS} 1, and 2MASS},
+	volume = {887},
+	issn = {0004-637X, 1538-4357},
+	url = {https://iopscience.iop.org/article/10.3847/1538-4357/ab5362},
+	doi = {10.3847/1538-4357/ab5362},
+	abstract = {We present a new three-dimensional map of dust reddening, based on Gaia parallaxes and stellar photometry from Pan-{STARRS} 1 and 2MASS. This map covers the sky north of a decl. of −30°, out to a distance of a few kiloparsecs. This new map contains three major improvements over our previous work. First, the inclusion of Gaia parallaxes dramatically improves distance estimates to nearby stars. Second, we incorporate a spatial prior that correlates the dust density across nearby sightlines. This produces a smoother map, with more isotropic clouds and smaller distance uncertainties, particularly to clouds within the nearest kiloparsec. Third, we infer the dust density with a distance resolution that is four times ﬁner than in our previous work, to accommodate the improvements in signal-to-noise enabled by the other improvements. As part of this work, we infer the distances, reddenings, and types of 799 million stars. (Our 3D dust map can be accessed at doi:10.7910/{DVN}/2EJ9TXor through the Python package dustmaps, while our catalog of stellar parameters can be accessed at doi:10.7910/{DVN}/{AV}9GXO. More information about the map, as well as an interactive viewer, can be found atargonaut.skymaps.info.) We obtain typical reddening uncertainties that are ∼30\% smaller than those reported in the Gaia {DR}2 catalog, reﬂecting the greater number of photometric passbands that enter into our analysis.},
+	pages = {93},
+	number = {1},
+	journaltitle = {The Astrophysical Journal},
+	shortjournal = {{ApJ}},
+	author = {Green, Gregory M. and Schlafly, Edward and Zucker, Catherine and Speagle, Joshua S. and Finkbeiner, Douglas},
+	urldate = {2024-05-01},
+	date = {2019-12-10},
+	langid = {english}
+}
+
+@article{green_dustmaps_python,
+       author = {{Green}, {Gregory M.}},
+        title = "{dustmaps: A Python interface for maps of interstellar dust}",
+      journal = {The Journal of Open Source Software},
+         year = "2018",
+        month = "Jun",
+       volume = {3},
+       number = {26},
+        pages = {695},
+          doi = {10.21105/joss.00695},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018JOSS....3..695M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
